deploy/prometheus/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "sre.plantbook.icu"
      http:
        paths:
          - path: /prom
            pathType: Prefix
            backend:
              service:
                name: prometheus-prometheus
                port:
                  number: 9090
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana # OR your service name
                port:
                  number: 3000 # grafana's service tcp/http port
          - path: /alert
            pathType: Prefix
            backend:
              service:
                name: prometheus-alertmanager
                port:
                  number: 9093
